# STU-Extras

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  Learning_CMake-LibraryProper.md  ProjectPrompts.md  ProjectTootConfig.h.in  README.md  STU-Extras.sln  STU-MoXer.md  Toot.cpp  Toot.hpp  main.cpp  output.txt
.claude/: CLAUDE.md
.github/: .copilot-instructions.md  copilot-instructions.md
AudioConversionTest/: CMakeLists.txt  CMakePresets.json  FileIO.C  MK_FileIO.BAT
C4U/: CMakeLists.txt  FuncExtract.c  FuncExtract.h  FuncExtract_treesitter.c  README-TREESITTER.md  main.c
C4U/doc/: ExtractCollections.md  HOWTO-treesitter.md
C4U/tests/: CMakeLists.txt  func_extract_parse_test.cpp
C4lib/: C4.H  C4lib.vcxproj  C4lib.vcxproj.filters  FC_Array.C  FC_Array.H  FC_Common.H  FC_External.H  FC_File.H  FC_File_WinAPI.cpp  FC_File_WinAPI.hpp
GameDataExtraction/: Bldg_Data_Table.c  MK_BUILD.BAT  MK_BUILD.SH  SPELLDAT_LBX.md  Spell_Data_Table.C  Spell_Data_Table.c  a.out  out_spell_casting_categories.txt
Learning_CMake/me_cmake_022/: CMakeLists.txt  Toot.cpp  _cmake_build.txt  _cmake_config.txt
Learning_CMake/me_cmake_022/TootLib/: CMakeLists.txt  TootLib.c  TootLib.h
Learning_CMake/me_cmake_022/TootLib/tests/: CMakeLists.txt  TootLib_tests.cpp
LoggingSystem/: ReMoM-Logging_Review.md  Wesnoth-Logging_Review.md  dosbox-Logging_Review.md
MoX-CombatGrid/: CMakeLists.txt  CMakePresets.json  main.cpp
MoX-CombatGrid/cmake/: CompilerWarnings.cmake
MoX-CombatGrid/doc/: MoX-CombatGrid.md
MoX_MASM64/: MoX_MASM64.vcxproj  MoX_MASM64.vcxproj.filters
PoC-SDL/: PoC-SDL.cpp  PoC-SDL.rc  PoC-SDL.vcxproj  PoC-SDL.vcxproj.filters  Resource.h
RemomMapgenItchio/: CLAUDE.md  CMakeLists.txt  PRD.md  README.md  RemomMapgenItchio.md  build_check.bat  build_helper.bat  build_log.txt  build_output.txt  build_wasm.bat  build_wasm.sh  build_wasm_stage.sh  deploy.conf.example  deploy_itchio.bat  deploy_itchio.sh  run_build.bat  run_build2.bat  run_build3.bat  serve_with_logging.py  wasm_build_log.txt
RemomMapgenItchio/.claude/: settings.json
RemomMapgenItchio/.specify/memory/: constitution.md
RemomMapgenItchio/build_wasm/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  RemomMapgenItchio.js  RemomMapgenItchio.wasm  RemomTests.js  RemomTests.wasm  RemomTests[1]_include.cmake  RemomTests[1]_tests.cmake  build.ninja  cmake_install.cmake  compile_commands.json  install_manifest.txt
RemomMapgenItchio/src/: main.cpp  shell.html
RemomMapgenItchio/src/editor/: EditorState.cpp  EditorState.hpp  UndoStack.cpp  UndoStack.hpp
RemomMapgenItchio/src/mapgen/: MapGenerator.cpp  MapGenerator.hpp  SimplexNoise.cpp  SimplexNoise.hpp
RemomMapgenItchio/src/mom_data/: MomConstants.hpp  MomEntities.cpp  MomEntities.hpp  MomGamFile.cpp  MomGamFile.hpp  MomWorld.cpp  MomWorld.hpp  WizardPresets.hpp
RemomMapgenItchio/src/platform/: FileDialog.cpp  FileDialog.hpp
RemomMapgenItchio/src/renderer/: MapRenderer.cpp  MapRenderer.hpp  Renderer.cpp  Renderer.hpp  UIRenderer.cpp  UIRenderer.hpp
RemomMapgenItchio/src/scenario/: Scenario.cpp  Scenario.hpp  ScenarioIO.cpp  ScenarioIO.hpp
RemomMapgenItchio/src/ui/: GameOptionsPanel.cpp  GameOptionsPanel.hpp  Minimap.cpp  Minimap.hpp  PropertiesPanel.cpp  PropertiesPanel.hpp  ToolPanel.cpp  ToolPanel.hpp  WizardPanel.cpp  WizardPanel.hpp
RemomMapgenItchio/src/validation/: SmoothingValidator.cpp  SmoothingValidator.hpp
RemomMapgenItchio/tests/: test_MapGenerator.cpp  test_MomGamFile.cpp  test_Scenario.cpp  test_SmoothingValidator.cpp  test_UndoStack.cpp  test_WizardPresets.cpp
SDL2-CMake-Conan/: conanfile.txt
STU-DOSBox/: Borland_Overlay_Manager_Turbo_Pascal-EXE_MagazineArticle-1992.md  CaptureGameData-PLAN.md  CaptureGameData-PRD.md  Generate_Roads.asm  Ideation-CaptureGameData.md  MAGIC_EXE-random.asm  MGC seg001 _main.asm  MGC-overlay-table.fwv  MoM-PRNG_Paths.html  MoM-PRNG_Paths.md  MoM-PRNG_Paths.mmd  MoM-Unit-Divergence.md  MoM-dseg-layout.csv  MoM-dseg-layout.md  OG-RNG-Instrumentation.md  ReMoM-CallTrace-PRD.md  STU-DOSBOX-scratch-notes.md  Simtex_Autotiling.asm  Stage0-Comparison-Process.md  WZD-overlay-table.fwv  analyze-wizards-calls.py  gen-fieldmap.py  launch-dosbox.sh  og-overlay-trace.sh  package-lock.json  r6-overlay-resolver-test.sh  r6-test.conf  stu-dosbox.conf
STU-Extras/: DeduRedux.cpp  Deduce-ProgGen.cpp  Deduce-UnitType.cpp  Deduce-UnitType.hpp  LFSR.cpp  PoC-Inja.cpp  PoC-json.cpp  STU-Extras.cpp  STU-Extras.hpp  STU-Extras.vcxproj  STU-Extras.vcxproj.filters
STU-Extras-Graphics/: STU-Extras-Graphics.cpp  STU-Extras-Graphics.vcxproj  STU-Extras-Graphics.vcxproj.filters
STU-ImGui-SDL/: Application.cpp  Application.hpp  STU-ImGui-SDL.vcxproj  STU-ImGui-SDL.vcxproj.filters  WinMain.cpp
STU-MASM64/: STU-MASM64.asm  STU-MASM64.vcxproj  STU-MASM64.vcxproj.filters  UncleRemusTales.asm  asm64code.asm  except.asm
STU-MoM131-Help/: STU-MoM131-Help.cpp  STU-MoM131-Help.vcxproj  STU-MoM131-Help.vcxproj.filters
STU-SDL/: Application.cpp  Configuration.cpp  Configuration.hpp  Platform.hpp  Platform_ImGui.cpp  Platform_SDL2.cpp  Query_SDL.cpp  SDL_Video.cpp  STU-SDL.cpp  STU-SDL.hpp  STU-SDL.vcxproj  STU-SDL.vcxproj.filters  STU_MoX.cpp  STU_STD.C  STU_STD.H  imgui.ini  imgui_SDL2_main.cpp  sdl_KD.C  sdl_MD.cpp
STUlib/: FC_Array.C  FC_Array.H  FC_File.C  FC_Internal.H  LoadGameFiles.cpp  LoadGameFiles.hpp  MWA_Current_Working_Directory.cpp  STUlib.cpp  STUlib.hpp  STUlib.vcxproj  STUlib.vcxproj.filters  WIZARDS.json
TootLib/: CMakeLists.txt  TootLib.cpp  TootLib.hpp
doc/: App-ImGui-SDL.md  Dasm-Ops-Test.md  FanDom-MoM-Player_to_AI_Diplomacy.md  GRAPHICS.asm  GraphicsGems1990-Dissolve.md  GraphicsPrimitives.md  LinearShiftFeedbackRegisters(LSFR).md  MoM-Deduce-DataTypes.md  MoM-Funcs-LoadScreenNewGameScreens.md  MoM-Funcs.md  MoM-MGC-Funcs.md  MoM-Newgame_Screen.md  MoM-TacticalCombat.odg  MoM-Tracing.md  MoM-UnitAttributes.md  MoX-Graphics.md  MoX-GraphicsPrimitives.odg  MoX-Line.asm  MoX-Line.md  MoX-Map-Scroll.md  MoX-Map.md  (+10 more)
tests/: CMakeLists.txt  hello_test.cpp
(+304 files in other folders)
