project(FuncExtract LANGUAGES C)

add_executable(FuncExtract main.c FuncExtract.c)

target_include_directories(FuncExtract PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

# Optional Tree-sitter based parser
option(USE_TREESITTER "Build Tree-sitter based parser" ON)

if(USE_TREESITTER)
	find_package(PkgConfig QUIET)
	if(PKG_CONFIG_FOUND)
		pkg_check_modules(TS QUIET tree-sitter)
		pkg_check_modules(TS_C QUIET tree-sitter-c)
	endif()

	if(TS_FOUND AND TS_C_FOUND)
		add_executable(FuncExtract_treesitter main.c FuncExtract_treesitter.c)
		target_include_directories(FuncExtract_treesitter PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${TS_INCLUDEDIR} ${TS_C_INCLUDEDIR})
		target_link_libraries(FuncExtract_treesitter PRIVATE ${TS_LIBRARIES} ${TS_C_LIBRARIES})
	else()
		find_path(TS_INCLUDE_DIR tree_sitter/api.h)
		find_library(TS_LIB NAMES tree-sitter treesitter)
		find_library(TS_C_LIB NAMES tree-sitter-c)
		if(TS_INCLUDE_DIR AND TS_LIB)
			add_executable(FuncExtract_treesitter main.c FuncExtract_treesitter.c)
			target_include_directories(FuncExtract_treesitter PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${TS_INCLUDE_DIR})
			if(TS_C_LIB)
				target_link_libraries(FuncExtract_treesitter PRIVATE ${TS_LIB} ${TS_C_LIB})
			else()
				target_link_libraries(FuncExtract_treesitter PRIVATE ${TS_LIB})
			endif()
		else()
			message(STATUS "Tree-sitter not found; skipping FuncExtract_treesitter target.")
		endif()
	endif()
endif()
