cmake_minimum_required(VERSION 3.15)
project(FuncExtract LANGUAGES C)

add_executable(FuncExtract main.c FuncExtract.c)

target_include_directories(FuncExtract PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

# Optional Tree-sitter based parser
option(USE_TREESITTER "Build Tree-sitter based parser" ON)

if(USE_TREESITTER)
	set(TS_LOCAL_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/tree-sitter")
	set(TS_LOCAL_LIB_C "${TS_LOCAL_ROOT}/lib/src/lib.c")
	set(TS_LOCAL_INCLUDE "${TS_LOCAL_ROOT}/lib/include")
	set(TS_LOCAL_SRC_INCLUDE "${TS_LOCAL_ROOT}/lib/src")

	set(TREE_SITTER_C_PARSER "" CACHE FILEPATH "Path to tree-sitter-c parser.c")
	set(TREE_SITTER_C_SCANNER "" CACHE FILEPATH "Optional path to tree-sitter-c scanner.c")

	set(TS_C_LOCAL_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/tree-sitter-c")
	set(TS_C_LOCAL_PARSER "${TS_C_LOCAL_ROOT}/src/parser.c")
	set(TS_C_LOCAL_SCANNER "${TS_C_LOCAL_ROOT}/src/scanner.c")

	set(TS_C_PARSER_SRC "")
	set(TS_C_SCANNER_SRC "")

	if(EXISTS "${TS_C_LOCAL_PARSER}")
		set(TS_C_PARSER_SRC "${TS_C_LOCAL_PARSER}")
		if(EXISTS "${TS_C_LOCAL_SCANNER}")
			set(TS_C_SCANNER_SRC "${TS_C_LOCAL_SCANNER}")
		endif()
	elseif(TREE_SITTER_C_PARSER AND EXISTS "${TREE_SITTER_C_PARSER}")
		set(TS_C_PARSER_SRC "${TREE_SITTER_C_PARSER}")
		if(TREE_SITTER_C_SCANNER AND EXISTS "${TREE_SITTER_C_SCANNER}")
			set(TS_C_SCANNER_SRC "${TREE_SITTER_C_SCANNER}")
		endif()
	endif()

	if(EXISTS "${TS_LOCAL_LIB_C}" AND EXISTS "${TS_LOCAL_INCLUDE}/tree_sitter/api.h" AND TS_C_PARSER_SRC)
		add_library(tree_sitter_runtime STATIC "${TS_LOCAL_LIB_C}")
		target_include_directories(tree_sitter_runtime PUBLIC "${TS_LOCAL_INCLUDE}" "${TS_LOCAL_SRC_INCLUDE}")

		add_library(tree_sitter_c_language STATIC "${TS_C_PARSER_SRC}" ${TS_C_SCANNER_SRC})
		target_include_directories(tree_sitter_c_language PUBLIC "${TS_LOCAL_INCLUDE}")

		add_executable(FuncExtract_treesitter FuncExtract_treesitter.c)
		target_include_directories(FuncExtract_treesitter PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} "${TS_LOCAL_INCLUDE}")
		target_link_libraries(FuncExtract_treesitter PRIVATE tree_sitter_runtime tree_sitter_c_language)
	else()
		find_package(PkgConfig QUIET)
		if(PKG_CONFIG_FOUND)
			pkg_check_modules(TS QUIET tree-sitter)
			pkg_check_modules(TS_C QUIET tree-sitter-c)
		endif()

		if(TS_FOUND AND TS_C_FOUND)
			add_executable(FuncExtract_treesitter FuncExtract_treesitter.c)
			target_include_directories(FuncExtract_treesitter PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${TS_INCLUDEDIR} ${TS_C_INCLUDEDIR})
			target_link_libraries(FuncExtract_treesitter PRIVATE ${TS_LIBRARIES} ${TS_C_LIBRARIES})
		else()
			find_path(TS_INCLUDE_DIR tree_sitter/api.h)
			find_library(TS_LIB NAMES tree-sitter treesitter)
			find_library(TS_C_LIB NAMES tree-sitter-c)
			if(TS_INCLUDE_DIR AND TS_LIB AND TS_C_LIB)
				add_executable(FuncExtract_treesitter FuncExtract_treesitter.c)
				target_include_directories(FuncExtract_treesitter PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${TS_INCLUDE_DIR})
				target_link_libraries(FuncExtract_treesitter PRIVATE ${TS_LIB} ${TS_C_LIB})
			else()
				message(STATUS "Tree-sitter runtime found in workspace, but tree-sitter-c parser source/library is missing. Place tree-sitter-c at C4U/tree-sitter-c or pass -DTREE_SITTER_C_PARSER=<path>/parser.c.")
				message(STATUS "Skipping FuncExtract_treesitter target.")
			endif()
		endif()
	endif()
endif()
